// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods .get() should return a method instance 1`] = `
{
  "_links": {
    "self": {
      "href": "https://api.mollie.com/v2/methods/ideal",
      "type": "application/hal+json",
    },
  },
  "description": "iDEAL",
  "id": "ideal",
  "image": {
    "size1x": "https://www.mollie.com/images/payscreen/methods/ideal.png",
    "size2x": "https://www.mollie.com/images/payscreen/methods/ideal%402x.png",
  },
  "resource": "method",
}
`;

exports[`methods .get() should work with a callback 1`] = `
{
  "_links": {
    "self": {
      "href": "https://api.mollie.com/v2/methods/ideal",
      "type": "application/hal+json",
    },
  },
  "description": "iDEAL",
  "id": "ideal",
  "image": {
    "size1x": "https://www.mollie.com/images/payscreen/methods/ideal.png",
    "size2x": "https://www.mollie.com/images/payscreen/methods/ideal%402x.png",
  },
  "resource": "method",
}
`;

exports[`methods .list() should return a list of all methods 1`] = `
[
  {
    "_links": {
      "self": {
        "href": "https://api.mollie.com/v2/methods/ideal",
        "type": "application/hal+json",
      },
    },
    "description": "iDEAL",
    "id": "ideal",
    "image": {
      "size1x": "https://www.mollie.com/images/payscreen/methods/ideal.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/ideal%402x.png",
    },
    "resource": "method",
  },
  {
    "_links": {
      "self": {
        "href": "https://api.mollie.com/v2/methods/creditcard",
        "type": "application/hal+json",
      },
    },
    "description": "Credit card",
    "id": "creditcard",
    "image": {
      "size1x": "https://www.mollie.com/images/payscreen/methods/creditcard.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/creditcard%402x.png",
    },
    "resource": "method",
  },
  {
    "_links": {
      "self": {
        "href": "https://api.mollie.com/v2/methods/banktransfer",
        "type": "application/hal+json",
      },
    },
    "description": "Bank transfer",
    "id": "banktransfer",
    "image": {
      "size1x": "https://www.mollie.com/images/payscreen/methods/banktransfer.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/banktransfer%402x.png",
    },
    "resource": "method",
  },
  {
    "_links": {
      "self": {
        "href": "https://api.mollie.com/v2/methods/inghomepay",
        "type": "application/hal+json",
      },
    },
    "description": "ING Home'Pay",
    "id": "inghomepay",
    "image": {
      "size1x": "https://www.mollie.com/images/payscreen/methods/inghomepay.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/inghomepay%402x.png",
    },
    "resource": "method",
  },
]
`;

exports[`methods .list() should work with a callback 1`] = `
[
  {
    "_links": {
      "self": {
        "href": "https://api.mollie.com/v2/methods/ideal",
        "type": "application/hal+json",
      },
    },
    "description": "iDEAL",
    "id": "ideal",
    "image": {
      "size1x": "https://www.mollie.com/images/payscreen/methods/ideal.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/ideal%402x.png",
    },
    "resource": "method",
  },
  {
    "_links": {
      "self": {
        "href": "https://api.mollie.com/v2/methods/creditcard",
        "type": "application/hal+json",
      },
    },
    "description": "Credit card",
    "id": "creditcard",
    "image": {
      "size1x": "https://www.mollie.com/images/payscreen/methods/creditcard.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/creditcard%402x.png",
    },
    "resource": "method",
  },
  {
    "_links": {
      "self": {
        "href": "https://api.mollie.com/v2/methods/banktransfer",
        "type": "application/hal+json",
      },
    },
    "description": "Bank transfer",
    "id": "banktransfer",
    "image": {
      "size1x": "https://www.mollie.com/images/payscreen/methods/banktransfer.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/banktransfer%402x.png",
    },
    "resource": "method",
  },
  {
    "_links": {
      "self": {
        "href": "https://api.mollie.com/v2/methods/inghomepay",
        "type": "application/hal+json",
      },
    },
    "description": "ING Home'Pay",
    "id": "inghomepay",
    "image": {
      "size1x": "https://www.mollie.com/images/payscreen/methods/inghomepay.png",
      "size2x": "https://www.mollie.com/images/payscreen/methods/inghomepay%402x.png",
    },
    "resource": "method",
  },
]
`;
